--- a/Reddit_scraping.ipynb
+++ b/Reddit_scraping.ipynb
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,8 @@
     "    pol_score['headlines'] = line\n",
     "    results.append(pol_score)\n",
     "\n",
-    "pprint(results[:3], width=100)"
+    "pprint(results[:3], width=100)\n",
+    "\n"
    ]
   },
   {
